--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react-dom": "16.0.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
     "typescript": "^3.2.4"
   },
   "scripts": {
